WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132318
REGRESSION (
r159358
): Crash in InjectedBundleHitTestResult::frame
https://bugs.webkit.org/show_bug.cgi?id=132318
Summary
REGRESSION (r159358): Crash in InjectedBundleHitTestResult::frame
mitz
Reported
2014-04-28 20:58:02 PDT
<
rdar://problem/16750708
> To reproduce this crash, navigate to the URL.
Attachments
Get the frame from the event target, not from its hit-test result
(2.81 KB, patch)
2014-04-28 21:01 PDT
,
mitz
aestes
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2014-04-28 21:01:56 PDT
Created
attachment 230352
[details]
Get the frame from the event target, not from its hit-test result
Andy Estes
Comment 2
2014-04-28 21:19:13 PDT
Comment on
attachment 230352
[details]
Get the frame from the event target, not from its hit-test result View in context:
https://bugs.webkit.org/attachment.cgi?id=230352&action=review
> Source/WebKit2/ChangeLog:14 > + frame for the action not from a hit test results, because some link activation actions are
"a hit test results"
mitz
Comment 3
2014-04-28 21:21:34 PDT
(In reply to
comment #2
)
> (From update of
attachment 230352
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=230352&action=review
> > > Source/WebKit2/ChangeLog:14 > > + frame for the action not from a hit test results, because some link activation actions are > > "a hit test results"
Fixed. Thanks for the review! Committed <
http://trac.webkit.org/r167923
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug